# my_hpc

kernels/cuda/: CMakeLists.txt  build.sh
kernels/cuda/include/: common.cuh
kernels/cuda/kernels/conv/: CMakeLists.txt
kernels/cuda/kernels/flash_attention/: CMakeLists.txt
kernels/cuda/kernels/fusion/: CMakeLists.txt
kernels/cuda/kernels/gemm/: CMakeLists.txt  gemm.cu
kernels/cuda/kernels/layernorm/: CMakeLists.txt
kernels/cuda/kernels/reduction/: CMakeLists.txt  reduction.cu
kernels/cuda/kernels/scan/: CMakeLists.txt  scan.cu
kernels/cuda/kernels/softmax/: CMakeLists.txt
kernels/cuda/kernels/transpose/: CMakeLists.txt  transpose.cu
